salesforce/metadata/objects/MSD_Log__c.object
<CustomObject>
    <label>MSD Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSD Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>MSD_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Run</label>
        <referenceTo>MSD_Run__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSD_Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INFO</fullName>
                    <default>true</default>
                    <label>INFO</label>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSD_Step__c</fullName>
        <label>Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MSD_RecordKey__c</fullName>
        <label>Record Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_CorrelationId__c</fullName>
        <label>Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>MSD_Level__c</columns>
        <columns>MSD_Step__c</columns>
        <columns>MSD_RecordKey__c</columns>
        <columns>MSD_CorrelationId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Logs</label>
    </listViews>
</CustomObject>